# pathfinder-pdf-renderer

./: .gitignore  .gitmodules  Cargo.toml
encoding/: Cargo.toml  README.md  build.rs
encoding/src/: cp1252.rs  lib.rs  macexpert.rs  macroman.rs  stdenc.rs  symbol.rs  zdingbat.rs
examples/convert/: Cargo.toml
examples/convert/src/: main.rs
examples/pdf2image/: Cargo.toml
examples/pdf2image/src/: main.rs
examples/svg2png/: Cargo.toml
examples/svg2png/src/: main.rs
examples/yew-reader/: Cargo.toml  README.md
examples/yew-reader/src/: context.rs  error.rs  main.rs  searchbar.rs  toolbox.rs  types.rs
examples/yew-wasm/: Cargo.toml
font/: Cargo.toml  README.md
font/examples/: font2svg.rs  font_info.rs  parse_fonts.rs
font/src/: cff.rs  eexec.rs  lib.rs  parsers.rs  postscript.rs  svg.rs  type1.rs
font/src/opentype/: base.rs  cmap.rs  gdef.rs  gsub.rs  kern.rs  mod.rs
glyph-matcher/: Cargo.toml
glyph-matcher/examples/: init.rs  sim.rs  test.rs  uni.rs
glyph-matcher/src/: frechet.rs  lib.rs
rasterize/: Cargo.toml
rasterize/src/: lib.rs
render/: Cargo.toml
render/src/: backend.rs  font.rs  fontentry.rs  image.rs  renderstate.rs  scene.rs  textstate.rs  tracer.rs
svg/: Cargo.toml
svg/examples/: animate.rs  parse.rs  rasterize.rs  show.rs  validate.rs
svg/src/: lib.rs  macro.rs  web.rs
svg/src/dom/: animate.rs  attrs.rs  ellipse.rs  error.rs  filter.rs  g.rs  gradient.rs  macros.rs  mod.rs  paint.rs  path.rs  polygon.rs  rect.rs  svg.rs  text.rs  util.rs  value.rs
svg/src/dom/parser/: color.rs  mod.rs  time.rs
svg/src/draw/: animate.rs  attrs.rs  draw.rs  ellipse.rs  filter.rs  g.rs  gradient.rs  macros.rs  mod.rs  paint.rs  path.rs  polygon.rs  rect.rs  resolve.rs  svg.rs
svg/src/draw/text/: chunk.rs  mod.rs
svg/src/text/: mod.rs  tags.rs
svg/test_data/: build.sh
view/: Cargo.toml
view/examples/: simple.rs
view/examples/simple/: Cargo.toml
view/examples/simple/src/: main.rs
view/examples/simplewasm/: Cargo.toml
view/examples/yewdemo/src/: pages.rs  view.rs
view/src/: config.rs  context.rs  gl.rs  interactive.rs  lib.rs  main.rs  native.rs  show.rs  view.rs  viewer.rs  wasm.rs
wasm/: Cargo.toml
wasm/examples/simple/src/: main.rs
wasm/examples/yewdemo/: Cargo.toml
wasm/examples/yewdemo/src/: api.rs  progressbar.rs  thumbnail.rs
wasm/src/: lib.rs  wasm.rs
