[workspace]
members = [
    "render",
    "view",
    "examples/pdf2image",
    "examples/convert",
    "wasm",
    "font",
    "glyph-matcher",
]

[workspace.dependencies]
pathfinder_gl = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_webgl = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_gpu = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_content = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_color = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_export = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_simd = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pdf = { git = "https://github.com/pdf-rs/pdf", default-features = false, rev = "b0f40b6" }
pdf_encoding = "0.4"
itertools = "0.13.0"
image = "0.25.2"
instant = "*"
custom_debug_derive = "*"
globalcache = { git = "https://github.com/s3bk/cachelib", features = ["sync"] }
istring = { git = "https://github.com/s3bk/istring" }
once_cell = "1.19.0"
serde_json = "1.0.120"
log = { version = "0.4" }
