[workspace]
members = [
    "render",
    "view",
    "font",
    "glyph-matcher",
    "encoding",
    "rasterize",
    # "svg",
    # TODO: Fix the bugs in example
    # "examples/*",
]


[workspace.package]
edition = "2021"
authors = ["s3bk", "Sandip Dey <sandip.dey1988@yahoo.com>"]
license = "MIT"
description = "PDF render library"


[workspace.dependencies]
pathfinder_canvas = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_gl = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_webgl = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_gpu = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_content = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_color = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_export = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_simd = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }
pathfinder_svg = { git = "https://github.com/servo/pathfinder", rev = "6ef6ccb" }

pdf = { git = "https://github.com/pdf-rs/pdf", default-features = false, rev = "b0f40b6" }

itertools = "0.13.0"
image = "0.25.5"
instant = "0.1.13"
custom_debug_derive = "0.6.2"
globalcache = { version = "0.3", features = ["sync"] }
istring = { git = "https://github.com/s3bk/istring" }
once_cell = "1.20.2"
serde_json = "1.0.133"
log = { version = "0.4" }

roxmltree = "0.20.0"
svgtypes = "0.15.2"
libflate = "2.1.0"
nom = "5.1.2"
isolang = "2.4"
unicode-joining-type = "1.0.0"
unic-ucd-category = "0.9"
unic-segment = "0.9"
unic-bidi = "0.9"
whatlang = { version = "0.16.4" }
lazy_static = { version = "1.5.0" }
palette = "0.7.6"
rand = "0.8.5"
indexmap = "2.7.0"
syn = { version = "2.0.90", features = ["full"] }
quote = "1.0.37"
env_logger = "0.11.5"
