[package]
name = "font"
version = "0.1.0"
authors = [
    "Sandip Dey <sandip.dey1988@yahoo.com>",
    "Sebastian Köln <s3bk@protonmail.org>",
]
edition = "2021"

[features]
unstable = ["slotmap/unstable", "tuple/nightly"]
# svg = ["svg_dom", "inflate"]
woff = ["brotli-decompressor", "inflate"]
type1 = ["postscript"]
type2 = []
opentype = []
cff = ["type1", "type2"]
postscript = []
math = []
default = ["opentype"]

[dependencies]
pdf_encoding = { path = "../encoding" }
pathfinder_geometry = { workspace = true }
pathfinder_content = { workspace = true }
pathfinder_color = { workspace = true }
tuple = { git = "https://github.com/s3bk/tuple/" }
nom = "5.1"
log = "0.4"
rand = { version = "0.7", features = ["wasm-bindgen"] }
slotmap = { version = "1.0" }
decorum = "0.3"
itertools = "0.13.0"
indexmap = "2.2.6"
brotli-decompressor = { version = "2.3", optional = true }
inflate = { version = "0.4.5", optional = true }
# svg_dom = { git = "https://github.com/sandyz1000/svg", optional = true, branch = "devel" }
istring = "0.3.4"

[dev-dependencies]
# svg_dom = { git = "https://github.com/sandyz1000/svg", branch = "devel" }
# svg_draw = { git = "https://github.com/sandyz1000/svg", branch = "devel" }
pathfinder_renderer = { workspace = true }
pathfinder_export = { workspace = true }
walkdir = "2.3"
env_logger = { version = "*" }
memmap = "*"
