[package]
name = "font"
version = "0.1.0"
authors = [
    "Sandip Dey <sandip.dey1988@yahoo.com>",
    "Sebastian Köln <s3bk@protonmail.org>",
]
edition = "2021"

[features]
unstable = ["slotmap/unstable", "tuple/nightly"]
# svg = ["svg_dom", "inflate"]
woff = ["brotli-decompressor", "inflate"]
type1 = ["postscript"]
type2 = []
opentype = []
cff = ["type1", "type2"]
postscript = []
math = []
default = ["opentype"]

[dependencies]
pdf_encoding = { path = "../encoding" }
pathfinder_geometry = { workspace = true }
pathfinder_content = { workspace = true }
pathfinder_color = { workspace = true }
tuple = { git = "https://github.com/s3bk/tuple/" }
nom = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
slotmap = { version = "1.0" }
decorum = "0.3"
itertools = { workspace = true }
indexmap = { workspace = true }
brotli-decompressor = { version = "4.0.1", optional = true }
inflate = { version = "0.4.5", optional = true }
# svg = { path = "../svg", optional = true }
istring = "0.4.0"

[dev-dependencies]
# svg = { path = "../svg", optional = true }
pathfinder_renderer = { workspace = true }
pathfinder_export = { workspace = true }
walkdir = "2.3"
env_logger = { version = "*" }
memmap = "*"
