[package]
name = "pdf_render"
version = "0.1.0"
authors = [
    "Sandip Dey <sandip.dey1988@yahoo.com>",
    "Sebastian Köln <s3bk@protonmail.com>",
]
edition = "2021"

[features]
unstable = []

[[bench]]
name = "render"
harness = false

[dependencies.pdf]
workspace = true
default-features = false
features = ["cache", "dump"]

[dependencies]
pathfinder_renderer = { workspace = true }
pathfinder_color = { workspace = true }
pathfinder_geometry = { workspace = true }
pathfinder_resources = { workspace = true }
pathfinder_content = { workspace = true }
log = "0.4"
font = { workspace = true }
pdf_encoding = { workspace = true }
itertools = { workspace = true }
image = { workspace = true }
instant = { workspace = true }
custom_debug_derive = { workspace = true }
globalcache = { workspace = true, features = ["sync"] }
istring = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
glyphmatcher = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
env_logger = "*"
