[package]
name = "pdf_svg"
version = "0.1.0"
edition = "2021"

members = [
    "dom",
    "draw",
    "text",
    "web",
]

default-members = [
    "dom",
    "draw",
    "text",
    "web"
]

[dependencies]
roxmltree = { workspace = true }
svgtypes = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
libflate = { workspace = true }
nom = { workspace = true }
isolang = { workspace = true }
unicode-joining-type = { workspace = true }
unic-ucd-category = { workspace = true }
unic-segment = { workspace = true }
unic-bidi = { workspace = true }
whatlang = { workspace = true }
lazy_static = { workspace = true }
palette = { workspace = true }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }

pathfinder_resources = { workspace = true }
pathfinder_geometry = { workspace = true }
pathfinder_content = { workspace = true }
pathfinder_renderer = { workspace = true }
pathfinder_color = { workspace = true }
pathfinder_simd = { workspace = true }


[dev-dependencies]
pathfinder_resources = { workspace = true }
pdf_view = { path = "../view" }
rasterize = { path = "../rasterize" }
env_logger = { workspace = true }
image = { workspace = true }
