[package]
name = "pdf_wasm"
version = "0.1.0"
edition = "2021"

[dependencies.pdf]
workspace = true
default-features = false
features = ["dump"]


[dependencies]
pdf_view = {path = "../view"}
pdf_render = { path = "../render" }
pathfinder_gl = { workspace = true }
pathfinder_resources = { workspace = true }
log = { workspace = true }
pathfinder_renderer = { workspace = true }
pathfinder_geometry = { workspace = true }
pathfinder_webgl = { workspace = true }
image = { workspace = true }
js-sys = "0.3.69"
web-sys = "0.3.69"
wasm-bindgen = "0.2.92"


[target.'cfg(unix)'.dependencies]
env_logger = "0.11.5"
pathfinder_gl = { workspace = true }
gl = "0.14.0"
glutin = "0.32.0"
glutin-winit = "0.5.0"
winit = "0.30.4"
tuple = "0.5"
raw-window-handle = "0.6.2"
