[package]
name = "pdf2image"
version = "0.1.0"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>", "Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf = { workspace = true }
pdf_render = { path = "../../render" }
argh = "0.1.12"
rasterize = { path = "../rasterize" }
pathfinder_geometry = { workspace = true }
env_logger = "0.11.5"
