[package]
name = "yew_wasm"
version = "0.1.0"
edition = "2021"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]

[dependencies]
yew = "0.21.0"
yew-router = "0.18.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = { version = "0.4.42" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6.5"
wasm-logger = "0.2"
regex = "1.5"
lazy_static = "1.4"
yew-hooks = "0.3.2"
stylist = { version = "0.13", features = ["yew_integration"] }
url = "2.5.1"
thiserror = "1.0.62"
js-sys = "0.3.69"
gloo-utils = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlElement",
    "MouseEvent",
    "DomRect",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlDivElement",
]
